fix scroll overflow

--- a/frontend/src/components/main/event_index_show_item.module.css
+++ b/frontend/src/components/main/event_index_show_item.module.css
@@ -83,7 +83,7 @@
 .setList {
     margin-left: 40px;
     height: 80%;
-    overflow: scroll;
+    overflow: auto;
     justify-content: center;
     text-align: center;
     margin-bottom: 40px;
@@ -107,4 +107,7 @@
 }
 .setlistcontainer{
     height: 90vh;
+}
+.setlistfm{
+    text-align: right;
 }
